--- a/assets/styles/components/_page-headers.scss
+++ b/assets/styles/components/_page-headers.scss
@@ -47,22 +47,29 @@
 // Page-header Shapes
 .header-shape {
   top: 0;
-  left: 50%;
+  left: 0;
   height: 0;
   z-index: -1;
   width: 100%;
   position: absolute;
   vertical-align: top;
   padding-bottom: 100%;
-  transform: translateX(-50%);
 
   svg {
     top: 0;
-    left: 0;
+    left: 50%;
     width: 100%;
     height: 100%;
     min-width: 544px;
     position: absolute;
+    transform: translateX(-50%);
+  }
+
+  @include media-md {
+    svg {
+      left: 0;
+      transform: none;
+    }
   }
 }
 
